website/websites/u64q/code/pidigits.1.scala.log

Wed, 19 Mar 2014 02:43:58 GMT

MAKE:
mv pidigits.scala pidigits.scala
mv: ‘pidigits.scala’ and ‘pidigits.scala’ are the same file
make: [pidigits.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.10.3/bin/scalac -optimise -target:jvm-1.7 pidigits.scala
pidigits.scala:9: error: expected class or object definition
def pi(n: Int) = {
^
pidigits.scala:20: error: expected class or object definition
def p10(s: String, offset: Int = 0) {
^
pidigits.scala:26: error: expected class or object definition
val n = if (args.isEmpty) 27 else args(0).toInt
^
pidigits.scala:27: error: expected class or object definition
p10(pi(n).toString().filterNot(_ == '.').substring(0, n))
^
four errors found
make: [pidigits.scala_run] Error 1 (ignored)
1.27s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.8.0/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts -Djava.library.path=Include/java -Xbootclasspath/a:/usr/local/src/scala-2.10.3/lib/scala-library.jar:/usr/local/src/scala-2.10.3/lib/akka-actors.jar:/usr/local/src/scala-2.10.3/lib/typesafe-config.jar pidigits 2000

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class pidigits
